vulkan natives needed only on osx